# rlhf-systems-kit

./: .gitignore  ANOMALY_DETECTION_FIXES.md  DIVERGENCE_ANALYSIS_README.md  FINAL_TRL_INTEGRATION_TEST_RESULTS.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Makefile  OPENRLHF_INTEGRATION_SUMMARY.md  PHASE_B_TESTING_SUMMARY.md  PR_DESCRIPTION.md  README.md  RESTORATION_SUMMARY.md  STABILITY_DASHBOARD_SUMMARY.md  TRL_INTEGRATION_SUMMARY.md  TRL_INTEGRATION_TEST_SUMMARY.md  VISUALIZATION_FIXES.md  comprehensive_trl_test.py  demo.py  demo_stability.py  example_divergence_usage.py  pyproject.toml  real_trl_test.py  requirements.txt  setup.py  simplified_trl_demo.py  test_cpu_training.py  test_divergence.py  test_openrlhf_integration.py  test_stability.py  train.py
docs/: TRL_INTEGRATION.md
examples/: anomaly_detection_demo.py  trl_integration_example.py
monitor/: __init__.py  app.py  logger.py  plot.py
openrlhf_integration_logs/: openrlhf_checkpoint_step_0  openrlhf_training_report.md
profiler/: __init__.py  anomaly_detection.py  anomaly_detection_simple.py  hooks.py  report.py  trace.py
rlhf_core/: __init__.py  divergence.py  logging.py  openrlhf_integration.py  policy.py  ppo.py  profiler.py  reward.py  trl_integration.py  visualization.py
runs/: latest
scripts/: assert_determinism.py  install_trl_integration.py  serve_dashboard.py
test_openrlhf_logs/: openrlhf_checkpoint_step_0  openrlhf_checkpoint_step_10  openrlhf_training_report.md  test_results.json
tests/: __init__.py  test_anomaly_detection_fixes.py  test_anomaly_detection_simple.py  test_anomaly_detection_simple_final.py  test_anomaly_detection_standalone.py  test_anomaly_detection_structure.py  test_determinism.py  test_implementation.py  test_logging_and_timing.py  (+2 more)
(+204 files in other folders)
